changed names added image

--- a/institucional.html
+++ b/institucional.html
@@ -110,24 +110,24 @@
 				<div id="equipe">
 					<div id="col1">
 						<h5>Analista de Banco de Dados</h5>
-						<p>Nathalia Pereira da Costa</p>
+						<p>Nathalia</p>
 	
 						<h5>Analista de Desenvolvimento</h5>
-						<p>Pedro Henrique da Silva Resende</p>
+						<p>Pedro</p>
 	
 						<h5>Analista de Desenvolvimento</h5>
-						<p>Vínicius Pereira da Silva</p>
+						<p>Vínicius</p>
 					</div>
 
 					<div id="col2">
 						<h5>Analista de Software</h5>
-						<p>Maria Alice Veloso Figueira</p>
+						<p>Maria</p>
 	
 						<h5>Webdesigner</h5>
-						<p>Fernanda Esteves</p>
+						<p>Fernanda</p>
 	
 						<h5>Analista de Infraestrutura</h5>
-						<p>Thalita Pereira da Silva</p>
+						<p>Thalita</p>
 					</div>
 				</div>
 			</article>
