--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 				<div id="titleh1">
 					<h1 class="lineRegular">Somos especializados em</h1>
-					<!-- <h1 class="lineBold">histórias de  -->
-					sucesso</h1>
+					<!-- <h1 class="lineBold">histórias de sucesso</h1> -->
+					
 
 					 <h1><span
 					     class="txt-rotate"
